# IT366-Project

./: .gitignore  CMakeLists.txt
assets/config/: fonts.cfg
assets/def/: enemies.json  input.json  items.json  overlay.json  tiles.json  towers.json  world.json
assets/def/window/: main_menu.json
include/: animation.h  entity.h  physics.h  player_entity.h
include/client/: animation.h  camera.h  client.h  client_network.h  gf2d_font.h  gf2d_sprite.h  network.h
include/client/editor/: editor.h  editor_camera.h  editor_overlay.h  tile_mode.h
include/client/game/: build.h
include/client/ui/: event.h  overlay.h  widget.h  window.h
include/common/: def.h  entity.h  logger.h  network.h  physics.h  player.h  player_entity.h  serialization.h  time.h  tower.h  types.h
include/common/buffer/: ring.h
include/common/game/: collision.h  enemy.h  entity.h  game.h  inventory.h  item.h  player.h  player_entity.h  projectile.h  tower.h  wave.h  world.h
include/common/network/: network.h  serialization.h  udp.h
include/common/render/: gf2d_font.h  gf2d_sprite.h
include/common/thread/: atomic.h  condvar.h  mutex.h  thread.h
include/server/: network.h  server.h  server_network.h
include/server/game/: player_manager.h
include/server/network/: network.h  network_session.h  server_network.h
src/: animation.c  entity.c  entrypoint.c  game.c  physics.c  player_entity.c
src/client/: animation.c  camera.c  client.c  gf2d_draw.c  gf2d_font.c  gf2d_graphics.c  gf2d_sprite.c  network.c
src/client/editor/: editor.c  editor_camera.c  editor_overlay.c  tile_mode.c
src/client/game/: build.c
src/client/network/: client_network.c  network.c  packet_handler.c
src/client/ui/: event.c  overlay.c  widget.c  window.c
src/common/: def.c  entity.c  game.c  logger.c  physics.c  player.c  player_entity.c  serialization.c  tower.c
src/common/buffer/: ring.c
src/common/game/: collision.c  enemy.c  entity.c  game.c  inventory.c  item.c  player.c  player_entity.c  projectile.c  tower.c  wave.c  world.c
src/common/network/: handler.c  network.c  packet_dispatch.c  serialization.c  udp.c
src/server/: server.c
src/server/game/: player_manager.c
(+26 files in other folders)
